// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`binotype.Context.Section > Section.convert > should convert Section to object 1`] = `
{
  "class": [
    "main",
  ],
  "content": "Block content",
  "id": "b1",
  "link": "/b1",
  "menu": true,
  "mode": "full",
  "title": {
    "formatted": "[b1]",
    "plain": "[b1]",
  },
}
`;

exports[`binotype.Context.Section > Section.load > should handle blocks as record 1`] = `
[
  {
    "class": [
      "main",
    ],
    "content": "Block content 1",
    "id": "b1",
    "link": "/#b1",
    "menu": true,
    "meta": {},
    "mode": "full",
    "title": {
      "formatted": "[b1]",
      "plain": "[b1]",
    },
  },
  {
    "class": [
      "side",
    ],
    "content": "Block content 2",
    "id": "b2",
    "link": "/#b2",
    "menu": true,
    "meta": {},
    "mode": "full",
    "title": {
      "formatted": "[b2]",
      "plain": "[b2]",
    },
  },
]
`;

exports[`binotype.Context.Section > Section.load > should handle fallback mode 1`] = `
{
  "class": [
    "main",
  ],
  "id": "b1",
  "link": "/b1",
  "menu": true,
  "meta": {},
  "mode": "header",
  "title": {
    "formatted": "[b1]",
    "plain": "[b1]",
  },
}
`;

exports[`binotype.Context.Section > Section.load > should handle simple block object 1`] = `
{
  "class": [
    "main",
  ],
  "content": "Block content",
  "id": "b1",
  "link": "/b1",
  "menu": true,
  "meta": {},
  "mode": "full",
  "title": {
    "formatted": "[b1]",
    "plain": "[b1]",
  },
}
`;
